<resources>

    <string name="app_name">Appointment</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Appointment</string>

    
    
    <string name="destination_input_hint">Add destination address</string>
    
    <string name="destination_select_point_from_map">Select Point</string>
    <string name="destination_keywords_search">Keywords Search</string>
    <string name="destination_favorite">Favorite</string>   
    <string name="hint_add_recipients">Pick from phonebook</string>
    <string name="hint_add_location">Pick from map</string>
    <string name="title_new_appointment">New appointment</string>
    <string name="title_recipients">Recipients</string>
    <string name="title_time">Time and date</string>
    <string name="title_location">Location</string>
    <string name="title_infomation">Appointment info</string>
    <string name="title_attendees">Attendees</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_send">Send</string>
    <string name="button_accept">accept</string>
    <string name="button_reject">reject</string>
    <string name="checkbot_share_location">share location ?</string>
</resources>