<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AppointmentEditActivity" >

    <LinearLayout
        android:id="@+id/bottom_bar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_cancel" >
        </Button>

        <Button
            android:id="@+id/btn_send"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_send" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_bar"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/separator_margin_horizontal"
        android:paddingRight="@dimen/separator_margin_horizontal" >

        <TextView
            android:id="@+id/recipients_separator"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_marginBottom="@dimen/separator_margin_bottom"
            android:layout_marginTop="@dimen/separator_margin_top"
            android:text="@string/title_recipients" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/recipients_editor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textMultiLine"
                android:focusable="false"
                android:enabled="false" >            
            </EditText>

            <ImageButton
                android:id="@+id/btn_add_recipients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_recipient"
                android:contentDescription="@string/hint_add_recipients"/>
        </LinearLayout>

        <TextView
            android:id="@+id/time_separator"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_marginBottom="@dimen/separator_margin_bottom"
            android:layout_marginTop="@dimen/separator_margin_top"
            android:text="@string/title_time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/time_picker"
                style="?android:attr/actionDropDownStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2013年2月8日 15:00" >
            </TextView>

            <TextView
                android:id="@+id/duration_picker"
                style="?android:attr/actionDropDownStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="共3个小时" >
            </TextView>
        </LinearLayout>

        <TextView
            android:id="@+id/location_separator"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_marginBottom="@dimen/separator_margin_bottom"
            android:layout_marginTop="@dimen/separator_margin_top"
            android:text="@string/title_location" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/location_editor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete"
                android:layout_weight="1" > 
            </EditText>

            <ImageButton
                android:id="@+id/btn_add_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_pick_location"
                android:contentDescription="@string/hint_add_location"/>
        </LinearLayout>

        <TextView
            android:id="@+id/info_separator"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_marginBottom="@dimen/separator_margin_bottom"
            android:layout_marginTop="@dimen/separator_margin_top"
            android:text="@string/title_infomation" />

        <EditText
            android:id="@+id/appointment_info_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" >
        </EditText>
    </LinearLayout>

</RelativeLayout>